# Vowel-Recognition-Engine

./: .gitignore  CMakeLists.txt  VowelRecognition.py  config.h  dataTypes.h  dwt.h  featureExtraction.h  fft.h  filterBank.h  helper.h  kmeans.h  main.c
portaudio/examples/: paex_record.c
